--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Deb"
-  avatar           : "profile.png"
+  avatar           : "profile.jpg"
   bio              : "PhD student in NLP"
   location         : "Boston, MA, USA"
   employer         :
@@ -102,7 +102,7 @@ author:
   instagram        :
   impactstory      : #"https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
   lastfm           :
-  linkedin         :
+  linkedin         : "debjyoti-saharoy-20209529"
   orcid            : 
   pinterest        :
   soundcloud       :
